--- a/SPTR/SPTR/SPTR.csproj
+++ b/SPTR/SPTR/SPTR.csproj
@@ -46,22 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bris.cs" />
-    <Compile Include="Simulation.cs" />
-    <Compile Include="Conducteur.cs" />
-    <Compile Include="Feu.cs" />
-    <Compile Include="Parametres.cs" />
+    <Compile Include="Objets XML\Bris.cs" />
+    <Compile Include="Objets XML\Simulation.cs" />
+    <Compile Include="Objets XML\Conducteur.cs" />
+    <Compile Include="Objets XML\Feu.cs" />
+    <Compile Include="Objets XML\Parametres.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Parcours.cs" />
+    <Compile Include="Objets XML\Parcours.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Route.cs" />
-    <Compile Include="Temperature.cs" />
+    <Compile Include="Objets XML\Route.cs" />
+    <Compile Include="Objets XML\Temperature.cs" />
+    <Compile Include="SimulationXMLParser.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
