Ajout d'un canvas avec drag move + mouse wheel zoom

--- a/SPTR/SPTR/SPTR.csproj
+++ b/SPTR/SPTR/SPTR.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Display.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Objets XML\Bris.cs" />
     <Compile Include="Objets XML\Simulation.cs" />
     <Compile Include="Objets XML\Conducteur.cs" />
