Done affichage élèments de base dans la grille
La grille est composé de cellules (interface). à date Feu et Asphalte
l'implémente. Toutes les cellules se paint elle mm.  Donc l'affichage
ressemble à : for each cells in grid: cell.paint(). Les voitures et
autres élèments sur la route seront dans l'objet asphalte

--- a/SPTR/SPTR/SPTR.csproj
+++ b/SPTR/SPTR/SPTR.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asphalte.cs" />
+    <Compile Include="Cellule.cs" />
+    <Compile Include="Grille.cs" />
     <Compile Include="Display.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -66,6 +69,8 @@
     <Compile Include="Objets XML\Route.cs" />
     <Compile Include="Objets XML\Temperature.cs" />
     <Compile Include="SimulationXMLParser.cs" />
+    <Compile Include="Vide.cs" />
+    <Compile Include="Voiture.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
