--- a/SPTR/SPTR/SPTR.csproj
+++ b/SPTR/SPTR/SPTR.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="À propos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="À propos.Designer.cs">
+      <DependentUpon>À propos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Asphalte.cs" />
     <Compile Include="Cellule.cs" />
     <Compile Include="Grille.cs" />
@@ -69,9 +75,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objets XML\Route.cs" />
-    <Compile Include="Objets XML\Temperature.cs" />
     <Compile Include="SimulationXMLParser.cs" />
     <Compile Include="Voiture.cs" />
+    <EmbeddedResource Include="À propos.resx">
+      <DependentUpon>À propos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -97,6 +105,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\small-car-symbol-icon-7578.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
