--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ SPTR/SPTR/obj/Debug/SPTR.csproj.GenerateResource.Cache
 SPTR/.vs/SPTR/v14/.suo
 SPTR/SPTR/bin/
 SPTR/SPTR/obj/
+SPTR/.vs/SPTR/v14/.suo
