Les Process hérite d'une classe abstraite maintenant
+ début ordonanceur

--- a/SPTR/SPTR/SPTR.csproj
+++ b/SPTR/SPTR/SPTR.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Communication\C02.cs" />
     <Compile Include="Communication\C01.cs" />
     <Compile Include="Ordonnanceur.cs" />
+    <Compile Include="Process\Process.cs" />
     <Compile Include="SimulationController.cs" />
     <Compile Include="Process\P01.cs" />
     <Compile Include="Process\P02.cs" />
