--- a/SPTR/SPTR/SPTR.csproj
+++ b/SPTR/SPTR/SPTR.csproj
@@ -117,6 +117,7 @@
     <Compile Include="ProcessResources\R10.cs" />
     <Compile Include="ProcessResources\R11.cs" />
     <Compile Include="ProcessResources\R12.cs" />
+    <Compile Include="VoitureIntelligente.cs" />
     <Compile Include="À propos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,7 +132,7 @@
     </Compile>
     <Compile Include="Numero.cs" />
     <Compile Include="Objets XML\Bris.cs" />
-    <Compile Include="Objets XML\Simulation.cs" />
+    <Compile Include="Simulation.cs" />
     <Compile Include="Objets XML\Conducteur.cs" />
     <Compile Include="Objets XML\Feu.cs" />
     <Compile Include="Objets XML\Parametres.cs" />
